# design-patterns-in-modern-cpp

./: .gitignore  CMakeLists.txt  README.md  diary.txt  test_entries.txt
CodingExercises/: Adapter_Coding_Exercise.cpp  Adapter_Exercise.cpp  Bridge_Exercise.cpp  ChainOfResponsibility_Exercise.cpp  ChainOfResponsibility_GoblinGame_Exercise.cpp  CommunicationProxy_Testing.cpp  Decorator_Exercise.cpp  Decorator_Flower_GoogleTest.cpp  Facade_Exercise.cpp  Flyweight_Exercise.cpp  Flyweight_Sentence_Exercise.cpp  Mediator_Exercise.cpp  Mediator_ParticipantExercise.cpp  Memento_BankAccount_Exercise.cpp  Memento_Exercise.cpp  Memento_TokenMachine_Exercise.cpp  Memento_TokenMachine_GoogleTest.cpp  Multiton_Manual.cpp  Observer_Rats_Alternative_Implementation.cpp  Observer_Rats_Swarm_Exercise.cpp  Observer_StockPrices_Exercise.cpp  PersonFactory_Exercise  PersonFactory_Exercise.cpp  ProtectiveProxy_Exercise.cpp  Prototype_Exercise.cpp  Proxy_Exercise.cpp  Singleton_Tester.cpp  Singleton_Testing_Exercise.cpp  Singleton_Testing_Manual.cpp  State_Boost_MSM_Simplified.cpp  State_Classic_LightSwitch.cpp  State_CombinationLock_CodingExercise.cpp  State_CombinationLock_Exercise.cpp  State_Handmade_PhoneStateMachine.cpp  Strategy_DynamicPolymorphism.cpp  Strategy_QuadraticSolver_Exercise.cpp  Strategy_StaticPolymorphism.cpp  TemplateMethod_CardGame_Exercise.cpp  TemplateMethod_CardGame_Exercise_GoogleTest.cpp  TemplateMethod_GameFramework.cpp  (+1 more)
coding-exercises/: CodeBuilder  CodeBuilder.cpp
examples/: di_container_example.cpp  singleton_testing_example  singleton_testing_example.cpp
(+120 files in other folders)
